--- a/GenomeAnalyzer/Views/Home/Index.cshtml
+++ b/GenomeAnalyzer/Views/Home/Index.cshtml
@@ -1,8 +1,78 @@
-﻿@{
+﻿@using GenomeAnalyzer.Domain.Enum
+@model IQueryable<GenomeAnalyzer.Domain.Entities.GenomeEntity>
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div>
+    <h4 class="mb-3 text-muted">Create genome entity</h4>
+    <form id="createGenomeForm">
+        <div class="mb-3">
+            <label class="form-label">Genome's name</label>
+            <input name="name" type="text" class="form-control"/>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Specie's type</label>
+            <select name="type" class="form-select mb-3" asp-items="Html.GetEnumSelectList<SpeciesType>()"></select>
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Raw genome</label>
+            <textarea name="rawGenome" type="text" class="form-control"></textarea>
+        </div>
+        <button id="createGenome" class="btn btn-primary mb-3">Submit</button>
+    </form>
 </div>
+
+<div id="creatingStatusCode">
+    <span id="responseDescription"></span>
+</div>
+
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Type</th>
+        <th>Nucleotides</th>
+        <th>Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@item.Name</td>
+            <td>@item.Type.ToString()</td>
+            <td>@item.RawGenome.Length</td>
+            <td>
+                <div class="btn-group" role="group">
+                    <button class="btn btn-sm btn-outline-secondary">Distribute</button>
+                    <button class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <button class="btn btn-sm btn-outline-secondary">Delete</button>
+                </div>
+            </td>
+        </tr>
+    }
+    </tbody>
+</table>
+
+@section Scripts
+{
+    <script>
+        $('#createGenome').on('click', function (e){
+            e.preventDefault();
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("Create", "Home")',
+                data: $('#createGenomeForm').serialize(),
+                success: function (response) {
+                    location.reload();
+                    //var span = document.getElementById("responseDescription");
+                    //span.textContent = "response.description";
+                },
+                error: function (response) {
+                    
+                }
+            });
+        });
+    </script>    
+}
