--- a/GenomeAnalyzer/Views/Home/GetGenome.cshtml
+++ b/GenomeAnalyzer/Views/Home/GetGenome.cshtml
@@ -2,19 +2,19 @@
 @model GenomeAnalyzer.Domain.Entities.GenomeEntity
 
 <form id="genomeForm">
-    <input asp-for="Id" type="hidden"/>
+    <input asp-for="Id" name="id" type="hidden"/>
     <div class="row">
         <div class="form-group col-md-6">
             <label asp-for="@Model.Name" class="col-form-label"></label>
-            <input asp-for="@Model.Name" type="text" class="form-control"/>
+            <input asp-for="@Model.Name" name="name" type="text" class="form-control"/>
         </div>
         <div class="form-group col-md-6">
             <label asp-for="@Model.Type" class="col-form-label"></label>
-            <select asp-for="@Model.Type" class="form-control" asp-items="Html.GetEnumSelectList<SpeciesType>()"></select>
+            <select asp-for="@Model.Type" name="type" class="form-control" asp-items="Html.GetEnumSelectList<SpeciesType>()"></select>
         </div>
         <div class="form-group col-md-12">
             <label asp-for="@Model.RawGenome" class="col-form-label"></label>
-            <textarea asp-for="@Model.RawGenome" type="text" class="form-control"></textarea>
+            <textarea asp-for="@Model.RawGenome" name="rawGenome" type="text" class="form-control"></textarea>
         </div>
     </div>
 </form>
