--- a/GenomeAnalyzer/Views/Home/Index.cshtml
+++ b/GenomeAnalyzer/Views/Home/Index.cshtml
@@ -76,74 +76,5 @@
     </div>
 </div>
 
-@section Scripts
-{
-    <script>
-        function callModal (id) {
-            openModal({
-                url: '@Url.Action("GetGenome")',
-                data: id,
-                content: $('#modal')
-            })
-        }
-        
-        $('#editGenome').on('click', function (e) {
-            e.preventDefault();
-            
-            let arr = $('#genomeForm').serialize().split('&');
-            let data = {
-                Id: parseInt(arr[0].split('=')[1]),
-                Name: arr[1].split('=')[1],
-                Type: parseInt(arr[2].split('=')[1]),
-                RawGenome: arr[3].split('=')[1]
-            }
-            
-            $.ajax({
-                type: 'POST',
-                url: '@Url.Action("Edit", "Home")',
-                contentType: "application/json",
-                data: JSON.stringify(data),
-                success: function (response) {
-                    console.log(response.description);
-                    location.reload();
-                },
-                error: function (response) {
-                    console.log(response.description);
-                }
-            });
-        });
-    
-        $('#cancelButton').on('click', function (e) {
-                e.preventDefault();
-                document.getElementById('createGenomeDiv').style.display = "none";
-            });
-        
-        $('#openingForm').on('click', function (e) {
-                e.preventDefault();
-                document.getElementById('createGenomeDiv').style.display = "block";
-            });
-    
-        $('#createGenome').on('click', function (e){
-            e.preventDefault();            
-            let arr = $('#createGenomeForm').serialize().split('&');
-            let data = {
-                Name: arr[0].split('=')[1],
-                Type: parseInt(arr[1].split('=')[1]),
-                RawGenome: arr[2].split('=')[1]
-            }
-            
-            $.ajax({
-                type: 'POST',
-                url: '@Url.Action("Create", "Home")',
-                contentType: "application/json",
-                data: JSON.stringify(data),
-                success: function (response) {
-                    location.reload();
-                },
-                error: function (response) {
-                    
-                }
-            });
-        });
-    </script>
-}
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/js/Home/home.js"></script>
