Implemented deleting feature

--- a/GenomeAnalyzer/Views/Home/Index.cshtml
+++ b/GenomeAnalyzer/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
                 <div class="btn-group" role="group">
                     <button class="btn btn-sm btn-outline-secondary">Distribute</button>
                     <button class="btn btn-sm btn-outline-secondary" onclick="callModal(@item.Id)">Edit</button>
-                    <button class="btn btn-sm btn-outline-secondary">Delete</button>
+                    <button class="btn btn-sm btn-outline-secondary" onclick="deleteGenome(@item.Id)">Delete</button>
                 </div>
             </td>
         </tr>
