Implemented choosing distribution method feature

--- a/GenomeAnalyzer/Views/Home/Index.cshtml
+++ b/GenomeAnalyzer/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
             <td>@item.RawGenome.Length</td>
             <td>
                 <div class="btn-group" role="group">
-                    <button class="btn btn-sm btn-outline-secondary">Distribute</button>
+                    <button class="btn btn-sm btn-outline-secondary" onclick="location.href='@Url.Action("Distribute","Home", new { id = item.Id })'" >Distribute</button>
                     <button class="btn btn-sm btn-outline-secondary" onclick="callModal(@item.Id)">Edit</button>
                     <button class="btn btn-sm btn-outline-secondary" onclick="deleteGenome(@item.Id)">Delete</button>
                 </div>
