--- a/GenomeAnalyzer/Views/Home/Distribute.cshtml
+++ b/GenomeAnalyzer/Views/Home/Distribute.cshtml
@@ -10,7 +10,7 @@
 <div>
     <h4 class="mb-3 text-muted">Genome</h4>
     <form class="mb-3" id="genomeForm">
-        <input asp-for="Id" name="id" type="hidden"/>
+        <input asp-for="Id" id="genomeId" name="id" type="hidden"/>
         <div class="row">
             <div class="form-group col-md-6">
                 <label class="col-form-label">Name</label>
@@ -32,22 +32,26 @@
     <div class="col-3" id="distributionOptions">
         <h5 class="mb-3 text-muted">Method</h5>
         <div class="form-check mb-3">
-            <input class="form-check-input" type="radio" name="distrRadios" id="nucRadio" value="option1" checked>
+            <input class="form-check-input" type="radio" name="distrRadios" id="nucRadio" value="nuc" checked>
             <label class="form-check-label">
                 By a nucleotide
             </label>
         </div>
         <div class="form-check mb-3">
-            <input class="form-check-input" type="radio" name="distrRadios" id="constLenRadio" value="option2">
+            <input class="form-check-input" type="radio" name="distrRadios" id="constLenRadio" value="constLen">
             <label class="form-check-label">
                 By constant lenght
             </label>
         </div>
         <div class="form-check mb-3">
-            <input class="form-check-input" type="radio" name="distrRadios" id="ngramRadio" value="option3">
+            <input class="form-check-input" type="radio" name="distrRadios" id="ngramRadio" value="ngram">
             <label class="form-check-label">
                 By Ngram
             </label>
+        </div>
+        <div class="btn-group" role="group">
+            <button id="distributeGenome" class="btn btn-outline-primary mb-3">Submit</button>
+            <button id="cancelButton" class="btn btn-outline-danger mb-3">Cancel</button>
         </div>
     </div>
     <div class="col-9">
@@ -56,7 +60,7 @@
             <form>
                 <div class="mb-3">
                     <label class="form-label">Nucleotide for distribution:</label>
-                    <select class="form-select">
+                    <select id="nucleotideSelect" class="form-select">
                         <option value="a">Adenine</option>
                         <option value="c">Cytosine</option>
                         <option value="g">Guanine</option>
